networking/virtual-service-with-weight/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: http-dr
spec:
  hosts:
  - httpd-master.eastus2.cloudapp.azure.com
  gateways:
  - web-gw
  http:
  - headers:
    route:
    - destination:
        host: httpd
        subset: v2
      weight: 90
    - destination:
        host: httpd
        subset: v1
      weight: 10
